fix(responsive): fix a few design issues on mobile view

--- a/client/app/about-us/about-us.scss
+++ b/client/app/about-us/about-us.scss
@@ -216,7 +216,7 @@
     }
   }
   #main .team-member-left {
-    margin: -25px auto;
+    margin: 25px auto -25px;
   }
   #main .team-member-left, 
   #main .team-member-right {
